--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
     <link href="css/custom.css" rel="stylesheet">
   </head>
   <body>
+    <div class="container">
+    <div class="col-md-3"></div>
+      <section class="col-xs-12 col-md-6 text-center">
+        <h1 class="row "></span> second math test</h1>
+        <h2 class="row"><span id="timer"></span> seconds left</h2>
+        <h2 class="row" id="question">3+2</h2>
+        <input class="row text-center" id="answer" placeholder="Answer"></input>
+
+        
+      </section>
+  </div>
+
 
   </body>
 </html>
