Add: CSS styling. Fixed: Game Over.

--- a/index.html
+++ b/index.html
@@ -11,19 +11,27 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="js/application.js"></script>
 
+    <link rel="shortcut icon" type="image/png" href="favicon.ico"/>
+
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
+
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:800italic,400' rel='stylesheet' type='text/css'>
+
   </head>
   <body>
     <div class="container">
-    <div class="col-md-3"></div>
-      <section class="col-xs-12 col-md-6 text-center">
-        <h1 class="row "></span> second math test</h1>
+      <section class="col-xs-10 col-md-offset-1 text-center">
+        <h1 class="row"></span>#tenSecondsMathTest</h1>
         <h2 class="row"><span id="timer"></span> seconds left</h2>
-        <h2 class="row" id="question">3+2</h2>
-        <input class="row text-center" id="answer" placeholder="Answer"></input>
-
-        
+        <div class="row panel panel-default">
+          <div class="panel-heading">
+            <h2 class="primary-text-color" id="question">3+2</h2>
+          </div>
+          <div class="panel-body">
+            <input class="text-center" id="answer" placeholder="Answer"></input>
+          </div>
+        </div>
       </section>
   </div>
 
