Added: slider and new question generation.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container">
       <section class="col-xs-10 col-md-offset-1 text-center">
         <h1 class="row">#tenSecondsMathTest</h1>
-        <h2 class="row"><span id="timer"></span> seconds left</h2>
+        <h2 class="clock row primary-text-color"><span id="timer"></span> seconds left</h2>
         <div class="row panel panel-default">
           <div class="panel-heading">
             <h2 class="primary-text-color" id="question"></h2>
@@ -34,7 +34,17 @@
         </div>
         <div class="row">
           <input type="range" id="number-picker" value="10" min="10" max="100">
-          <output for="number-picker" id="number"></output>
+          <output for="number-picker" class="text-muted" id="number"></output>
+        </div>
+        <div class="row">
+          <div class="checkbox">
+            <label>
+              <input type="checkbox"> +
+            </label>            
+            <label>
+              <input type="checkbox"> -
+            </label>
+          </div>
         </div>
      </section>
   </div>
